# aws-lambda-dynamo-vehicle

./: .gitignore  README.md  api.yaml  pants.toml  pyproject.toml
.devcontainer/: devcontainer.json  requirements-dev.txt
diagrams/: class.md  class.puml  sequence.md  table.md
functions/: users_get.py
functions/user_post/: requirements.txt
src/line/: handle_message.py  lambda_function.old.py  lambda_function.py
src/rent/: users_get.py
src/return/: BUILD  main.py
src/vehicles/: BUILD  lambda_function.py
terraform/: .terraform.lock.hcl  api.tf  backend.tf  dynamodb.tf  lambda.tf  main.tf  outputs.tf  ssm.tf  variables.tf
