[tool.poetry]
name = "vehicle-rental"
version = "0.1.0"
description = ""
authors = ["paperlefthand <being.paperlefthand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = "^2.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
